Styling on the task pages
 * Make the code editor relative to the body
 * Refactor all the code tasks to use the
   created general-code-task
 * Introduces:
    - general-code-task

--- a/app/elements/editor-console/code-editor.html
+++ b/app/elements/editor-console/code-editor.html
@@ -1,4 +1,15 @@
 <dom-module id="code-editor">
+	<style>
+		:host{
+			display: block;
+			height: 100%;
+		}
+
+		#editor{
+			height: 100%;
+			z-index:0;
+		}
+	</style>
 	<template>
 		<iron-ajax
 			id="runCodeRequest"
@@ -9,7 +20,7 @@
 			content-type="application/json"
 			>
 		</iron-ajax>
-		<div id="editor" style="height: 850px; z-index:0;"></div>
+		<div id="editor"></div>
 	</template>
 	<script src="/bower_components/ace-min-noconflict/ace.js" type="application/javascript"></script>
 	<script src="/bower_components/ace-min-noconflict/ext-language_tools.js" type="application/javascript"></script>
