--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -61,6 +61,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="submission/challenge-page.html">
 <link rel="import" href="submission/countdown-timer.html">
 <link rel="import" href="submission/sequential/sequential-challenge.html">
+<link rel="import" href="submission/tasks/general-code-task.html">
 <link rel="import" href="submission/tasks/task-display.html">
 <link rel="import" href="submission/tasks/task-timeout.html">
 <link rel="import" href="submission/tasks/simple-code/simple-code-task.html">
