--- a/app/elements/editor-console/general-console.html
+++ b/app/elements/editor-console/general-console.html
@@ -1,36 +1,29 @@
 <dom-module id="general-console">
 	<style>
-		#consoleContainer{
-			height: 20%;
+		:host{
+			display: block;
+			height: 100%;
 		}
-
 		#consoleOutput{
-			border: none;
-			position: relative;
-			width: 100%;
-			height: 80%;
-			max-height: 80%;
-			left: 0;
-			right: 0;
+			height: 100%;
 		}
-
+		#shadowConsole{
+			height: 100%;
+		}
 		p{
 			font-family: "Lucida Console", Monaco, monospace;
 		}
 	</style>
 
 	<template>
-		<div id="consoleContainer">
-			<iron-pages id="consoleOutput" selected="{{selected}}">
-				<div>
-					<p id="firstTab">{{text}}</p>
-				</div>
-				<div>
-					<content></content>
-				</div>
-			</iron-pages>
-		</div>
-
+		<iron-pages id="consoleOutput" selected="{{selected}}">
+			<div>
+				<p id="firstTab">{{text}}</p>
+			</div>
+			<div id="shadowConsole">
+				<content></content>
+			</div>
+		</iron-pages>
 	</template>
 	<script>
 		Polymer({
