--- a/app/elements/editor-console/javaut/javaut-output.html
+++ b/app/elements/editor-console/javaut/javaut-output.html
@@ -1,49 +1,53 @@
 <dom-module id="javaut-output">
-    <style>
-      .inline{
-        display: inline;
-      }
-      p{
-        font-family: "Lucida Console", Monaco, monospace;
-      }
-    </style>
-  <template>
-    <p>{{runOutput.Stderr}}</p>
-    <p>Number of tests <span>{{runOutput.Results.Tests}}</span></p>
-    <p>Number of failures <span>{{runOutput.Results.Failures}}</span></p>
-    <p>Number of errors <span>{{runOutput.Results.Errors}}</span></p>
-    <template id="testCases" is="dom-repeat" items="{{runOutput.Results.TestCase}}">
-      <div>
-        <iron-icon src="{{getIcon(item)}}"></iron-icon>
-        <p class="inline"><span>{{getText(item)}}</span></p>
-      </div>
-    </template>
-  </template>
+		<style>
+			:host{
+				display: block;
+				height: 100%;
+			}
+			.inline{
+				display: inline;
+			}
+			p{
+				font-family: "Lucida Console", Monaco, monospace;
+			}
+		</style>
+	<template>
+		<p>{{runOutput.Stderr}}</p>
+		<p>Number of tests <span>{{runOutput.Results.Tests}}</span></p>
+		<p>Number of failures <span>{{runOutput.Results.Failures}}</span></p>
+		<p>Number of errors <span>{{runOutput.Results.Errors}}</span></p>
+		<template id="testCases" is="dom-repeat" items="{{runOutput.Results.TestCase}}">
+			<div>
+				<iron-icon src="{{getIcon(item)}}"></iron-icon>
+				<p class="inline"><span>{{getText(item)}}</span></p>
+			</div>
+		</template>
+	</template>
 
-  <script>
-    Polymer({
-      is:'javaut-output',
-      properties:{
-        runOutput:{
-          type: Object,
-          notify: true,
-          reflectToAttribute: true
-        }
-      },
-      getText: function(testCase){
-        if(testCase.Failure.Message != ""){
-          return testCase.Name + " failed on " + testCase.Failure.Message;
-        }
-        return testCase.Name;
-      },
-      getIcon: function(testCase){
-        if(testCase.Failure.Message != ""){
-          return "images/not-ok.png";
-        }else{
-          return "images/ok.png";
-        }
-      }
-  });
+	<script>
+		Polymer({
+			is:'javaut-output',
+			properties:{
+				runOutput:{
+					type: Object,
+					notify: true,
+					reflectToAttribute: true
+				}
+			},
+			getText: function(testCase){
+				if(testCase.Failure.Message != ""){
+					return testCase.Name + " failed on " + testCase.Failure.Message;
+				}
+				return testCase.Name;
+			},
+			getIcon: function(testCase){
+				if(testCase.Failure.Message != ""){
+					return "images/not-ok.png";
+				}else{
+					return "images/ok.png";
+				}
+			}
+	});
 
-  </script>
+	</script>
 </dom-module>
