--- a/app/elements/submission/tasks/javaut/javaut-task.html
+++ b/app/elements/submission/tasks/javaut/javaut-task.html
@@ -1,55 +1,45 @@
 <dom-module id="javaut-task">
-  <template>
-    <iron-ajax
-      id="ajaxRequest"
-      handle-as="json"
-      on-response="onResponse"
-      debounce-duration="1000"
-      content-type="application/json"
-      >
-    </iron-ajax>
-    <div class="horizontal layout">
-      <div class="flex">
-        <paper-material elevation="1" class="card">
-          <code-editor id="codeEditor" on-response="onResponse" on-error="onError"></code-editor>
-        </paper-material>
-      </div>
-      <div class="flex">
-        <paper-material elevation="1" class="card">
-          <task-display task="{{task}}"></task-display>
-        </paper-material>
-        <paper-material elevation="1" class="card">
-          <div class="horizontal layout">
-            <paper-icon-button icon="av:play-arrow" on-click="runCode">Run code</paper-icon-button>
-          </div>
-          <javaut-console id="console" </javaut-console>
-        </paper-material>
-      </div>
-    </div>
-  </template>
-  <script>
-    Polymer({
-      is: 'javaut-task',
-      properties: {
-        task: {
-          type: Object,
-          notify: true,
-          reflectToAttribute: true
-        }
-      },
-      ready: function(){
-        this.$.codeEditor.setMode("java");
-      },
-      runCode: function(){
-        this.$.codeEditor.runCode("javaut", this.task.Key);
-        this.$.console.loading();
-      },
-      onResponse: function(r){
-        this.$.console.setOutput(r.detail.response);
-      },
-      onError: function(error){
-        handleError(error);
-      }
-    });
-  </script>
+	<style>
+		:host{
+			display: block;
+			height: 100%;
+		}
+	</style>
+	<template>
+		<code-task task="{{task}}" control="{{control}}" on-response="onResponse" on-error="onError">
+			<javaut-console id="console"> </javaut-console>
+		</code-task>
+	</template>
+	<script>
+		Polymer({
+			is: 'javaut-task',
+			properties: {
+				task: {
+					type: Object,
+					notify: true,
+					reflectToAttribute: true
+				},
+				control: {
+					type: Object,
+					notify: true
+				}
+			},
+			observers: [
+				'afterPropertiesSet(task)'
+			],
+			afterPropertiesSet: function(){
+				this.control = {};
+				var component = this;
+				this.control.loading = function(){
+					component.$.console.loading();
+				};
+			},
+			onResponse: function(r){
+				this.$.console.setOutput(r.detail.response);
+			},
+			onError: function(error){
+				handleError(error);
+			}
+		});
+	</script>
 </dom-module>
